working email form

--- a/approach.html
+++ b/approach.html
@@ -2725,7 +2725,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                                                                     href="#"
                                                                                                     data-typography="NavAlpha"
                                                                                                     class="x-el c1-3d x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-3c c1-24 c1-3m c1-3n c1-3o c1-3p c1-2j c1-2h c1-2g c1-2i c1-b c1-29 c1-3e c1-3q c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l"
-                                                                                                    data-tccl="ux2.HEADER.header9.Nav.Default.Link.Default.126780.click,click" style="font-weight: 700;">Our Digital Approach
+                                                                                                    data-tccl="ux2.HEADER.header9.Nav.Default.Link.Default.126780.click,click" style="font-weight: 700;">Our Analytical Approach
                                                                 </a></li>
                                                                 <li data-ux="ListItemInline"
                                                                     class="x-el x-el-li nav-item c1-1 c1-2 c1-32 c1-2v c1-33 c1-2e c1-34 c1-2f c1-35 c1-36 c1-s c1-37 c1-b c1-c c1-38 c1-39 c1-d c1-e c1-f c1-g visible"
@@ -2801,7 +2801,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                                                href="#"
                                                                                data-typography="NavAlpha"
                                                                                class="x-el x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-2e c1-24 c1-48 c1-49 c1-4a c1-b c1-3d c1-29 c1-3e c1-3q c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l"
-                                                                               data-tccl="ux2.HEADER.header9.Nav.MoreMenu.Link.Default.126784.click,click" style="font-weight: 700;">Our Digital Approach</a></li>
+                                                                               data-tccl="ux2.HEADER.header9.Nav.MoreMenu.Link.Default.126784.click,click" style="font-weight: 700;">Our Analytical Approach</a></li>
                                                                         <li data-ux="ListItem" role="menuitem"
                                                                             class="x-el x-el-li c1-1 c1-2 c1-32 c1-1e c1-3c c1-46 c1-b c1-c c1-47 c1-d c1-e c1-f c1-g">
                                                                             <a rel="" role="link" aria-haspopup="false"
@@ -2871,7 +2871,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                            data-edit-interactive="true" data-close="true"
                                                            href="#" data-typography="NavBeta"
                                                            class="x-el x-el-a c1-1 c1-2 c1-21 c1-22 c1-23 c1-18 c1-24 c1-2l c1-2m c1-z c1-10 c1-1g c1-58 c1-59 c1-b c1-4q c1-5a c1-3q c1-5b c1-5c c1-5d c1-5e c1-5f c1-5g c1-5h"
-                                                           data-tccl="ux2.HEADER.header9.NavigationDrawer.Default.Link.Default.126786.click,click" style="font-weight: 700;"><span>Our Digital Approach</span></a>
+                                                           data-tccl="ux2.HEADER.header9.NavigationDrawer.Default.Link.Default.126786.click,click" style="font-weight: 700;"><span>Our Analytical Approach</span></a>
                                                     </li>
                                                     <li role="menuitem" data-ux="NavigationDrawerListItem"
                                                         class="x-el x-el-li c1-1 c1-2 c1-53 c1-1e c1-3c c1-54 c1-55 c1-56 c1-b c1-c c1-47 c1-57 c1-d c1-e c1-f c1-g">
@@ -2959,6 +2959,20 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                     </div>
                 </div>
             </div>
+            <div style="width: 100%; display: flex; flex-direction: column;">
+                <form action="mailto:officialparos@gmail.com" method="GET" style="display: flex; flex-direction: column; align-items: center; margin-top: 30px;justify-content: center; height: 10%;">
+                    <div style="margin: 15 0;">
+                        <input style="border: 1px solid black; height: 30px;width: 250px; border-radius: 0;" type="text" placeholder="Subject" name="subject" required />
+                    </div>
+                    <div>
+                        <textarea style="border: 1px solid black; border-radius: 0; height: 80px; width: 800px;" placeholder="Your message" name="body" required></textarea>
+                    </div>
+                </form>
+                <div style="width: 100%; height: 100px; display: flex; align-items: center; justify-content: center;">
+                    <button style="font-family: 'Gudea', Georgia, serif; height: 50%; width: 20%;border: none; background-color: rgb(5, 68, 164); color: white; font-weight: bold;" type="submit">REACH OUT BY EMAIL</button>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
