--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
     }
 
     .x .c1-41 {
-        max-height: 45vh
+        height: 45vh
     }
 
     .x .c1-42 {
@@ -1376,7 +1376,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
     }
 
     .x .c1-6u {
-        max-height: 500px
+        height: 500px
     }
 
     .x .c1-6v {
@@ -1672,7 +1672,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
     }
 
     .x .c1-9s {
-        max-height: unset
+        heigt: unset
     }
 
     .x .c1-9u {
@@ -1724,7 +1724,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
     }
 
     .x .c1-az {
-        max-height: 300px
+        height: 300px
     }
 
     .x .c1-b0 {
@@ -2589,7 +2589,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
             <div id="98874ccb-575e-430f-bd95-7e58035c591d" class="widget widget-header widget-header-header-9">
                 <div data-ux="Header" role="main" data-aid="HEADER_WIDGET" id="n-58417" class="x-el x-el-div x-el x-el c1-1 c1-2 c1-b c1-c c1-d c1-e c1-f c1-g c1-1 c1-2 c1-3 c1-b c1-c c1-d c1-e c1-f c1-g c1-1 c1-2 c1-b c1-c c1-d c1-e c1-f c1-g">
                     <div>
-                        <section data-ux="Section" data-aid="HEADER_SECTION" class="x-el x-el-section c1-1 c1-2 c1-3 c1-h c1-i c1-j c1-b c1-c c1-k c1-l c1-m c1-n c1-o c1-p c1-q c1-r c1-d c1-e c1-f c1-g" style="max-height: 100vh;">
+                        <section data-ux="Section" data-aid="HEADER_SECTION" class="x-el x-el-section c1-1 c1-2 c1-3 c1-h c1-i c1-j c1-b c1-c c1-k c1-l c1-m c1-n c1-o c1-p c1-q c1-r c1-d c1-e c1-f c1-g" style="height: 100vh;">
                             <div data-ux="Block" class="x-el x-el-div c1-1 c1-2 c1-s c1-b c1-c c1-d c1-e c1-f c1-g">
                                 <div data-ux="Block" style="position: sticky; top: 0" class="x-el x-el-div c1-1 c1-2 c1-t c1-b c1-c c1-d c1-e c1-f c1-g">
                                     <nav data-ux="Block" class="x-el x-el-nav c1-1 c1-2 c1-s c1-u c1-v c1-b c1-c c1-d c1-w c1-e c1-f c1-g">
@@ -2615,7 +2615,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                             <ul data-ux="List" id="nav-126777" class="x-el x-el-ul c1-1 c1-2 c1-1c c1-1e c1-2v c1-2w c1-2x c1-2y c1-2z c1-s c1-1r c1-30 c1-1t c1-31 c1-b c1-c c1-d c1-e c1-f c1-g" style="white-space: nowrap;">
                                                                 <li data-ux="ListItemInline" class="x-el x-el-li nav-item c1-1 c1-2 c1-32 c1-2v c1-33 c1-2e c1-34 c1-2f c1-35 c1-36 c1-s c1-37 c1-b c1-c c1-38 c1-39 c1-d c1-e c1-f c1-g visible" style="visibility: visible;"><a rel="" role="link" aria-haspopup="menu" data-ux="NavLinkActive" target="" data-page="565db5d5-c1bf-49bb-8011-6b72d545a6ac" data-edit-interactive="true" href="#" data-typography="NavAlpha" class="x-el x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-3c c1-24 c1-b c1-3d c1-3e c1-3f c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l" data-tccl="ux2.HEADER.header9.Nav.Default.Link.Active.126779.click,click">Home</a>
                                                                 </li>
-                                                                <li data-ux="ListItemInline" class="x-el x-el-li nav-item c1-1 c1-2 c1-32 c1-2v c1-33 c1-2e c1-34 c1-2f c1-35 c1-36 c1-s c1-37 c1-b c1-c c1-38 c1-39 c1-d c1-e c1-f c1-g visible" style="visibility: visible;"><a rel="" role="link" aria-haspopup="false" data-ux="NavLink" target="" data-page="af78189e-a2a9-4887-8be0-d6c3123e954f" data-edit-interactive="true" href="./approach.html" data-typography="NavAlpha" class="x-el x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-3c c1-24 c1-3m c1-3n c1-3o c1-3p c1-2j c1-2h c1-2g c1-2i c1-b c1-29 c1-3e c1-3q c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l" data-tccl="ux2.HEADER.header9.Nav.Default.Link.Default.126780.click,click">Our Digital Approach
+                                                                <li data-ux="ListItemInline" class="x-el x-el-li nav-item c1-1 c1-2 c1-32 c1-2v c1-33 c1-2e c1-34 c1-2f c1-35 c1-36 c1-s c1-37 c1-b c1-c c1-38 c1-39 c1-d c1-e c1-f c1-g visible" style="visibility: visible;"><a rel="" role="link" aria-haspopup="false" data-ux="NavLink" target="" data-page="af78189e-a2a9-4887-8be0-d6c3123e954f" data-edit-interactive="true" href="./approach.html" data-typography="NavAlpha" class="x-el x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-3c c1-24 c1-3m c1-3n c1-3o c1-3p c1-2j c1-2h c1-2g c1-2i c1-b c1-29 c1-3e c1-3q c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l" data-tccl="ux2.HEADER.header9.Nav.Default.Link.Default.126780.click,click">Our Analytical Approach
                                                                 </a></li>
                                                                 <li data-ux="ListItemInline" class="x-el x-el-li nav-item c1-1 c1-2 c1-32 c1-2v c1-33 c1-2e c1-34 c1-2f c1-35 c1-36 c1-s c1-37 c1-b c1-c c1-38 c1-39 c1-d c1-e c1-f c1-g visible" style="visibility: visible;"><a rel="" role="link" aria-haspopup="false" data-ux="NavLink" target="" data-page="af78189e-a2a9-4887-8be0-d6c3123e954f" data-edit-interactive="true" href="./competencies.html" data-typography="NavAlpha" class="x-el x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-3c c1-24 c1-3m c1-3n c1-3o c1-3p c1-2j c1-2h c1-2g c1-2i c1-b c1-29 c1-3e c1-3q c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l" data-tccl="ux2.HEADER.header9.Nav.Default.Link.Default.126780.click,click">Core Competencies
                                                                 </a></li>
@@ -2630,7 +2630,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                                             <a rel="" role="link" aria-haspopup="menu" data-ux="NavMoreMenuLinkActive" target="" data-page="565db5d5-c1bf-49bb-8011-6b72d545a6ac" data-edit-interactive="true" aria-labelledby="more-126778" href="#" data-typography="NavAlpha" class="x-el x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-2e c1-24 c1-48 c1-49 c1-4a c1-b c1-3d c1-3e c1-3f c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l" data-tccl="ux2.HEADER.header9.Nav.MoreMenu.Link.Active.126783.click,click">Home</a>
                                                                         </li>
                                                                         <li data-ux="ListItem" role="menuitem" class="x-el x-el-li c1-1 c1-2 c1-32 c1-1e c1-3c c1-46 c1-b c1-c c1-47 c1-d c1-e c1-f c1-g">
-                                                                            <a rel="" role="link" aria-haspopup="false" data-ux="NavMoreMenuLink" target="" data-page="af78189e-a2a9-4887-8be0-d6c3123e954f" data-edit-interactive="true" aria-labelledby="more-126778" href="./approach.html" data-typography="NavAlpha" class="x-el x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-2e c1-24 c1-48 c1-49 c1-4a c1-b c1-29 c1-3e c1-3q c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l" data-tccl="ux2.HEADER.header9.Nav.MoreMenu.Link.Default.126784.click,click">Our Digital Approach</a></li>
+                                                                            <a rel="" role="link" aria-haspopup="false" data-ux="NavMoreMenuLink" target="" data-page="af78189e-a2a9-4887-8be0-d6c3123e954f" data-edit-interactive="true" aria-labelledby="more-126778" href="./approach.html" data-typography="NavAlpha" class="x-el x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-2e c1-24 c1-48 c1-49 c1-4a c1-b c1-29 c1-3e c1-3q c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l" data-tccl="ux2.HEADER.header9.Nav.MoreMenu.Link.Default.126784.click,click">Our Analytical Approach</a></li>
                                                                         <li data-ux="ListItem" role="menuitem" class="x-el x-el-li c1-1 c1-2 c1-32 c1-1e c1-3c c1-46 c1-b c1-c c1-47 c1-d c1-e c1-f c1-g">
                                                                             <a rel="" role="link" aria-haspopup="false" data-ux="NavMoreMenuLink" target="" data-page="af78189e-a2a9-4887-8be0-d6c3123e954f" data-edit-interactive="true" aria-labelledby="more-126778" href="./competencies.html" data-typography="NavAlpha" class="x-el x-el-a c1-3a c1-3b c1-21 c1-22 c1-23 c1-2e c1-24 c1-48 c1-49 c1-4a c1-b c1-29 c1-3e c1-3q c1-3g c1-3h c1-3i c1-3j c1-3k c1-3l" data-tccl="ux2.HEADER.header9.Nav.MoreMenu.Link.Default.126784.click,click">Core Competencies</a></li>
                                                                         <li data-ux="ListItem" role="menuitem" class="x-el x-el-li c1-1 c1-2 c1-32 c1-1e c1-3c c1-46 c1-b c1-c c1-47 c1-d c1-e c1-f c1-g">
@@ -2658,7 +2658,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                                                         <a rel="" role="link" aria-haspopup="menu" data-ux="NavigationDrawerLinkActive" target="" data-page="565db5d5-c1bf-49bb-8011-6b72d545a6ac" data-edit-interactive="true" data-close="true" href="#" data-typography="NavBeta" class="x-el x-el-a c1-1 c1-2 c1-21 c1-22 c1-23 c1-18 c1-24 c1-2l c1-2m c1-z c1-10 c1-1g c1-58 c1-59 c1-b c1-4q c1-5a c1-3f c1-5b c1-5c c1-5d c1-5e c1-5f c1-5g c1-5h" data-tccl="ux2.HEADER.header9.NavigationDrawer.Default.Link.Active.126785.click,click"><span>Home</span></a>
                                                     </li>
                                                     <li role="menuitem" data-ux="NavigationDrawerListItem" class="x-el x-el-li c1-1 c1-2 c1-53 c1-1e c1-3c c1-54 c1-55 c1-56 c1-b c1-c c1-47 c1-57 c1-d c1-e c1-f c1-g">
-                                                        <a rel="" role="link" aria-haspopup="false" data-ux="NavigationDrawerLink" target="" data-page="af78189e-a2a9-4887-8be0-d6c3123e954f" data-edit-interactive="true" data-close="true" href="./approach.html" data-typography="NavBeta" class="x-el x-el-a c1-1 c1-2 c1-21 c1-22 c1-23 c1-18 c1-24 c1-2l c1-2m c1-z c1-10 c1-1g c1-58 c1-59 c1-b c1-4q c1-5a c1-3q c1-5b c1-5c c1-5d c1-5e c1-5f c1-5g c1-5h" data-tccl="ux2.HEADER.header9.NavigationDrawer.Default.Link.Default.126786.click,click"><span>Our Digital Approach</span></a>
+                                                        <a rel="" role="link" aria-haspopup="false" data-ux="NavigationDrawerLink" target="" data-page="af78189e-a2a9-4887-8be0-d6c3123e954f" data-edit-interactive="true" data-close="true" href="./approach.html" data-typography="NavBeta" class="x-el x-el-a c1-1 c1-2 c1-21 c1-22 c1-23 c1-18 c1-24 c1-2l c1-2m c1-z c1-10 c1-1g c1-58 c1-59 c1-b c1-4q c1-5a c1-3q c1-5b c1-5c c1-5d c1-5e c1-5f c1-5g c1-5h" data-tccl="ux2.HEADER.header9.NavigationDrawer.Default.Link.Default.126786.click,click"><span>Our Analytical Approach</span></a>
                                                     </li>
                                                     <li role="menuitem" data-ux="NavigationDrawerListItem" class="x-el x-el-li c1-1 c1-2 c1-53 c1-1e c1-3c c1-54 c1-55 c1-56 c1-b c1-c c1-47 c1-57 c1-d c1-e c1-f c1-g">
                                                         <a rel="" role="link" aria-haspopup="false" data-ux="NavigationDrawerLink" target="" data-page="af78189e-a2a9-4887-8be0-d6c3123e954f" data-edit-interactive="true" data-close="true" href="./competencies.html" data-typography="NavBeta" class="x-el x-el-a c1-1 c1-2 c1-21 c1-22 c1-23 c1-18 c1-24 c1-2l c1-2m c1-z c1-10 c1-1g c1-58 c1-59 c1-b c1-4q c1-5a c1-3q c1-5b c1-5c c1-5d c1-5e c1-5f c1-5g c1-5h" data-tccl="ux2.HEADER.header9.NavigationDrawer.Default.Link.Default.126786.click,click"><span>Core Competencies</span></a>
@@ -2701,6 +2701,20 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
             </div>
         </div>
     </div>
+    <div style="width: 100%; display: flex; flex-direction: column;">
+        <form action="mailto:officialparos@gmail.com" method="GET" style="display: flex; flex-direction: column; align-items: center; margin-top: 30px;justify-content: center; height: 10%;">
+            <div style="margin: 15 0;">
+                <input style="border: 1px solid black; height: 30px;width: 250px; border-radius: 0;" type="text" placeholder="Subject" name="subject" required />
+            </div>
+            <div>
+                <textarea style="border: 1px solid black; border-radius: 0; height: 80px; width: 800px;" placeholder="Your message" name="body" required></textarea>
+            </div>
+        </form>
+        <div style="width: 100%; height: 100px; display: flex; align-items: center; justify-content: center;">
+            <button style="font-family: 'Gudea', Georgia, serif; height: 50%; width: 20%;border: none; background-color: rgb(5, 68, 164); color: white; font-weight: bold;" type="submit">REACH OUT BY EMAIL</button>
+        </div>
+    </div>
+
 </div>
 <script type="text/javascript">"IntersectionObserver" in window && "Intl" in window && "Locale" in window.Intl || document.write(`\x3Cscript src="https://img1.wsimg.com/poly/v3/polyfill.min.js?rum=0&unknown=polyfill&flags=gated&features=Intl.~locale.en-CA">\x3C/script>`)</script>
 <script src="//img1.wsimg.com/blobby/go/421501b6-3a9b-4b12-9189-11022c993de2/gpub/7bf29d9a02377298/script.js" crossorigin=""></script>
