--- a/competencies.html
+++ b/competencies.html
@@ -2776,7 +2776,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
     </div>
     <div style="width: 100%; display: flex; flex-direction: column;">
         <form action="mailto:officialparos@gmail.com" method="GET" style="display: flex; flex-direction: column; align-items: center; margin-top: 30px;justify-content: center; height: 10%;">
-            <div style="margin: 15 0 15 0;">
+            <div style="margin: 15 0;">
                 <input style="border: 1px solid black; height: 30px;width: 250px; border-radius: 0;" type="text" placeholder="Subject" name="subject" required />
             </div>
             <div>
@@ -2784,7 +2784,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
             </div>
         </form>
         <div style="width: 100%; height: 100px; display: flex; align-items: center; justify-content: center;">
-            <button style="font-family: 'Gudea', Georgia, serif; height: 50%; width: 20%;border: none; background-color: rgb(5, 68, 164); color: white; font-weight: bold;" type="submit">REACH OUT BY EMAIL</button>
+            <button style="font-family: 'Gudea', Georgia, serif; height: 50%; padding: 0 25;border: none; background-color: rgb(5, 68, 164); color: white; font-weight: bold;" type="submit">REACH OUT BY EMAIL</button>
         </div>
     </div>
 
