--- a/index.html
+++ b/index.html
@@ -2711,7 +2711,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
             </div>
         </form>
         <div style="width: 100%; height: 100px; display: flex; align-items: center; justify-content: center;">
-            <button style="font-family: 'Gudea', Georgia, serif; height: 50%; width: 20%;border: none; background-color: rgb(5, 68, 164); color: white; font-weight: bold;" type="submit">REACH OUT BY EMAIL</button>
+            <button style="font-family: 'Gudea', Georgia, serif; height: 50%; padding: 0 25;border: none; background-color: rgb(5, 68, 164); color: white; font-weight: bold;" type="submit">REACH OUT BY EMAIL</button>
         </div>
     </div>
 
